--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -48,13 +48,18 @@
         
             <div class="control-group">
               <label class="control-label">Google account</label>
-              <div class="input-append">
+              <button class="btn btn-success" 
+                      type="button"
+                      ng-click="authGoogle(settings.user.google)">Authorize</button>
+
+              <!-- <div class="input-append">
                 <input  class="span3"
                         type="text"
                         ng-model="settings.user.google">
                 <button class="btn btn-success" 
                         type="button"
-                        ng-click="authGoogle(settings.user.google)">Authorize</button>
+                        ng-click="authGoogle(settings.user.google)">Authorize</button> -->
+                        
               </div>
             </div>
 
