--- a/war/js/views/logout.html
+++ b/war/js/views/logout.html
@@ -1,6 +1,5 @@
 <!-- loggin-out -->
-<div id="loggin-out">
+<div id="loading">
   <span class="entypo">&#9203;</span>
-  <!-- <p>Logging you out..</p> -->
 </div>
 <!-- end loggin-out -->
