--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -1,178 +1,157 @@
-
-
 #timeline {
   
 }
+
 
 #timeline-controls {
   padding-bottom: 20px;
   overflow: hidden;
 }
 
+
 #timeline-toolbar {
   overflow: hidden;
   padding: 0 0 0 0;
   height: 35px;
+
+  select {
+    margin: 0;
+    padding: 0;
+    width: 160px;
+
+    &:last-child {
+      margin-left: 10px;
+    }
+  }
+
+  .btn-group {
+    margin-left: 10px;
+  }
 }
-
-#timeline-toolbar select {
-  margin: 0;
-  padding: 0;
-  width: 160px;
-}
-
-#timeline-toolbar select:last-child {
-  margin-left: 10px;
-}
-
-#timeline-toolbar .btn-group {
-  margin-left: 10px;
-}
-
-
-
-
-
-
 
 
 #stats {
   overflow: hidden;
+
+  #groupStats {
+    display: block;
+    overflow: hidden;
+
+    #groupPie {
+      float:left;
+      width: 380px;
+      height: 270px;
+    }
+
+    .groupStatInfo {
+      ul {
+        list-style: none;
+
+        li {
+          width: 300px;
+          margin-right: 15px;
+          float: left;
+          margin-bottom: 25px;
+          display: inline;
+
+          h5 {
+            display: inline;
+          }
+
+          small {
+          }
+        }
+      }
+    }
+  }
 }
-
-#groupStats {
-  display: block;
-  overflow: hidden;
-}
-
-#groupStats #groupPie {
-  float:left;
-  width: 380px;
-  height: 270px;
-}
-
-#groupStats .groupStatInfo {
-  
-}
-
-#groupStats .groupStatInfo ul {
-  list-style: none;
-}
-
-#groupStats .groupStatInfo ul li {
-  width: 300px;
-  margin-right: 15px;
-  float: left;
-  margin-bottom: 25px;
-  display: inline;
-}
-
-#groupStats .groupStatInfo ul li h5 {
-  display: inline;
-}
-
-#groupStats .groupStatInfo ul li small {
-}
-
-
-
 
 
 #memberBars {
+  ul {
+    list-style: none;
+
+    li {
+      float: left;
+      width: 280px;
+      height: 110px;
+      margin-right: 30px;
+      margin-bottom: 30px;
+
+      h4 {  
+      }
+
+      .progress {
+        margin-bottom: 5px;
+      
+        .bar {
+          width: 100%;
+        }
+
+        .bar-Available {
+          background-color: #4f824f;
+          background-image: -moz-linear-gradient(top, #4f824f, #406940);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4f824f), to(#406940));
+          background-image: -webkit-linear-gradient(top, #4f824f, #406940);
+          background-image: -o-linear-gradient(top, #4f824f, #406940);
+          background-image: linear-gradient(to bottom, #4f824f, #406940);
+          background-repeat: repeat-x;
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', 
+          endColorstr='#ff406940', GradientType=0);
+        }
+
+        .bar-BeschikbaarZuid {
+          background-color: #e08a0c;
+          background-image: -moz-linear-gradient(top, #e08a0c, #c77b0a);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e08a0c), to(#c77b0a));
+          background-image: -webkit-linear-gradient(top, #e08a0c, #c77b0a);
+          background-image: -o-linear-gradient(top, #e08a0c, #c77b0a);
+          background-image: linear-gradient(to bottom, #e08a0c, #c77b0a);
+          background-repeat: repeat-x;
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', 
+          endColorstr='#ffc77b0a', GradientType=0);
+        }
+
+        .bar-BeschikbaarNoord {
+          background-color: #1a1a1a;
+          background-image: -moz-linear-gradient(top, #1a1a1a, #050505);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1a1a1a), to(#050505));
+          background-image: -webkit-linear-gradient(top, #1a1a1a, #050505);
+          background-image: -o-linear-gradient(top, #1a1a1a, #050505);
+          background-image: linear-gradient(to bottom, #1a1a1a, #050505);
+          background-repeat: repeat-x;
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', 
+          endColorstr='#ff050505', GradientType=0);  
+        }
+
+        .bar-SchipperVanDienst {
+          background-color: #e0c100;
+          background-image: -moz-linear-gradient(top, #e0c100, #c7ac00);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e0c100), to(#c7ac00));
+          background-image: -webkit-linear-gradient(top, #e0c100, #c7ac00);
+          background-image: -o-linear-gradient(top, #e0c100, #c7ac00);
+          background-image: linear-gradient(to bottom, #e0c100, #c7ac00);
+          background-repeat: repeat-x;
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', 
+          endColorstr='#ffc7ac00', GradientType=0); 
+        }
+
+        .bar-Unavailable {
+          background-color: #a93232;
+          background-image: -moz-linear-gradient(top, #a93232, #8f2b2b);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a93232), to(#8f2b2b));
+          background-image: -webkit-linear-gradient(top, #a93232, #8f2b2b);
+          background-image: -o-linear-gradient(top, #a93232, #8f2b2b);
+          background-image: linear-gradient(to bottom, #a93232, #8f2b2b);
+          background-repeat: repeat-x;
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', 
+          endColorstr='#ff8f2b2b', GradientType=0);  
+        }
+      }
+
+    }
+  }
 }
-
-#memberBars ul {
-  list-style: none;
-}
-
-#memberBars ul li {
-  float: left;
-  width: 280px;
-  height: 110px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-
-#memberBars ul li h4 {
-  
-}
-
-#memberBars ul li .progress {
-  margin-bottom: 5px;
-}
-
-#memberBars ul li .bar {
-  width: 100%;
-}
-
-
-
-#memberBars .bar-Available {
-  background-color: #4f824f;
-  background-image: -moz-linear-gradient(top, #4f824f, #406940);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4f824f), to(#406940));
-  background-image: -webkit-linear-gradient(top, #4f824f, #406940);
-  background-image: -o-linear-gradient(top, #4f824f, #406940);
-  background-image: linear-gradient(to bottom, #4f824f, #406940);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', 
-  endColorstr='#ff406940', GradientType=0);
-}
-
-#memberBars .bar-BeschikbaarZuid {
-  background-color: #e08a0c;
-  background-image: -moz-linear-gradient(top, #e08a0c, #c77b0a);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e08a0c), to(#c77b0a));
-  background-image: -webkit-linear-gradient(top, #e08a0c, #c77b0a);
-  background-image: -o-linear-gradient(top, #e08a0c, #c77b0a);
-  background-image: linear-gradient(to bottom, #e08a0c, #c77b0a);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', 
-  endColorstr='#ffc77b0a', GradientType=0);
-}
-
-#memberBars .bar-BeschikbaarNoord {
-  background-color: #1a1a1a;
-  background-image: -moz-linear-gradient(top, #1a1a1a, #050505);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1a1a1a), to(#050505));
-  background-image: -webkit-linear-gradient(top, #1a1a1a, #050505);
-  background-image: -o-linear-gradient(top, #1a1a1a, #050505);
-  background-image: linear-gradient(to bottom, #1a1a1a, #050505);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', 
-  endColorstr='#ff050505', GradientType=0);  
-}
-
-#memberBars .bar-SchipperVanDienst {
-  background-color: #e0c100;
-  background-image: -moz-linear-gradient(top, #e0c100, #c7ac00);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e0c100), to(#c7ac00));
-  background-image: -webkit-linear-gradient(top, #e0c100, #c7ac00);
-  background-image: -o-linear-gradient(top, #e0c100, #c7ac00);
-  background-image: linear-gradient(to bottom, #e0c100, #c7ac00);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', 
-  endColorstr='#ffc7ac00', GradientType=0); 
-}
-
-#memberBars .bar-Unavailable {
-  background-color: #a93232;
-  background-image: -moz-linear-gradient(top, #a93232, #8f2b2b);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a93232), to(#8f2b2b));
-  background-image: -webkit-linear-gradient(top, #a93232, #8f2b2b);
-  background-image: -o-linear-gradient(top, #a93232, #8f2b2b);
-  background-image: linear-gradient(to bottom, #a93232, #8f2b2b);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', 
-  endColorstr='#ff8f2b2b', GradientType=0);  
-}
-
-
-
-
-
-
-
 
 
 /*legenda*/
@@ -180,62 +159,61 @@
   background-color: #f5f4ee;
   padding-top: 10px;
   margin-top: -20px;
-}
 
-.legenda-row {
-  overflow: hidden;
-  display: block;
-  margin: 10px 20px;
-}
+  .legenda-row {
+    overflow: hidden;
+    display: block;
+    margin: 10px 20px;
 
-.last-legenda-row {
-  margin-bottom: -5px;
-}
+    strong {
+      width: 90px;
+      display: inline;
+      float: left;
+      text-shadow: 1px 1px 0 rgba(255, 255, 255, 1);
+    }
 
-.legenda-row strong {
-  width: 90px;
-  display: inline;
-  float: left;
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 1);
-}
+    ul {
+      list-style-type: none;
 
-.legenda-row ul {
-  list-style-type: none;
-}
+      li {
+        float: left;
+        margin-right: 15px;
+        border-right: 1px solid #ddd;
+        padding-right: 15px;
+        min-width: 135px;
 
-.legenda-row ul li {
-  float: left;
-  margin-right: 15px;
-  border-right: 1px solid #ddd;
-  padding-right: 15px;
-  min-width: 135px;
-}
+        &:last-child {
+          margin-right: 0;
+          border-right: none;
+          padding-right: 0;
+        }
 
-.legenda-row ul li:last-child {
-  margin-right: 0;
-  border-right: none;
-  padding-right: 0;
-}
+        label {
+          font-size: 11px;
 
-.legenda-row ul li label {
-  font-size: 11px;
-}
+          &:hover {
+            cursor: pointer;
+            color: #65619b;
+          }
 
-.legenda-row ul li label:hover {
-  cursor: pointer;
-  color: #65619b;
-}
+          input[type=checkbox] {
+            margin: -2px 4px 0 0;
+          }
+        }
+      }
+    }
 
-.legenda-row ul li label input[type=checkbox] {
-  margin: -2px 4px 0 0;
-}
+    .square {
+      display: block;
+      height: 12px;
+      width: 12px;
+      margin-top: 4px;
+    }
+  }
 
-
-.legenda-row .square {
-  display: block;
-  height: 12px;
-  width: 12px;
-  margin-top: 4px;
+  .last-legenda-row {
+    margin-bottom: -5px;
+  }
 }
 
 
@@ -263,7 +241,6 @@
   background-color: #65619b;  
 }
 
-
 .legenda-row .legenda-more .square {
   background-color: #415e6b;  
 }
@@ -275,6 +252,51 @@
 .legenda-row .legenda-less .square {
   background-color: #a0a0a0;  
 }
+
+
+
+#legends {
+  display: block;
+  overflow: hidden;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 100%;
+
+  ul {
+    margin-left: 1px;
+    list-style: none;
+
+    li {
+      display: inline;
+      float: left;
+      margin-right: 25px;
+      list-style-image: none;
+    }
+  }
+}
+
+.square {
+  float: left;
+  margin-top: 1px;
+  margin-right: 5px;
+  width: 14px;
+  height: 14px;
+}
+
+
+
+
+
+
+
+
+div.bar span {
+    font-size: 9px;
+}
+
+
+
+
 
 
 
@@ -945,39 +967,10 @@ div.timeline-event-range {
 
 
 
-div.bar span {
-    font-size: 9px;
-}
 
 
 
 
-
-
-#legends {
-  display: block;
-  overflow: hidden;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  width: 100%;
-}
-#legends ul {
-  margin-left: 1px;
-  list-style: none;
-}
-#legends ul li {
-  display: inline;
-  float: left;
-  margin-right: 25px;
-  list-style-image: none;
-}
-.square {
-    float: left;
-  margin-top: 1px;
-  margin-right: 5px;
-  width: 14px;
-  height: 14px;
-}
 
 
 
