--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -4,17 +4,41 @@
 
 <!-- row-fluid -->
 <div class="row-fluid">
+    
+    <!-- announcements sidebar -->
+    <div id="announcements" class="span4">
 
-	<!-- span12 -->
-  <div class="span12">
+      <!-- news -->
+      <div id="news">
+        <h4>Announcements</h4>
+        <hr>
+        <!-- p2000 loop -->
+        <table class="table table-striped">
+          <tr ng-repeat="alarm in alarms">
+            <td>
+              <h5>
+              <span class="label label-important" ng-show="alarm.prio.1">PRIO 1</span>
+              <span class="label label-warning" ng-show="alarm.prio.2">PRIO 2</span>
+              <span class="label label-info" ng-show="alarm.prio.3">PRIO 3</span>
+              <p>{{alarm.body}}</p>
+              </h5>
+              <span class="badge pull-right">{{alarm.msgCode}}</span>
+              <small class="muted"><i>{{alarm.day}} {{alarm.time}}</i></small>
+            </td>
+          </tr>
+        </table>
+        <!-- end p2000 loop -->
+      </div>
+      <!-- end news -->
+
+    </div>
+    <!-- end announcements sidebar -->
 
     <!-- pie charts for groups -->
     <div id="weekly-pies" class="span8">
       <h4>{{ui.dashboard.thisWeek}}</h4>
       <hr>
-
       <p class="muted" ng-show="loading.status">{{loading.message}}</p>
-
       <!-- pie loop -->
       <ul class="weekly" ng-hide="loadingPies">
         <li ng-repeat="pie in pies">
@@ -34,59 +58,6 @@
       <!-- end pie loop -->
     </div>
     <!-- end pie charts for groups -->
-    
-    <!-- announcements sidebar -->
-    <div id="announcements" class="span4">
-
-      <!-- new messages -->
-      <!-- <div id="new-messages" 
-            class="announcement"
-            ng-show="(messages.length > 0)">
-        <h4>{{ui.dashboard.newMessage}}</h4>
-        <hr>
-
-        <table class="table table-striped">
-          <tr ng-repeat="message in messages">
-            <td>
-              <h5><a href="#/messages?uuid={{message.uuid}}#message">{{message.subject | noTitle}}</a></h5>
-              <span class="sender">{{message.requester|convertEve|convertUserIdToName}}</span>
-              <small class="muted"><i>{{message.creationTime | nicelyDate}}</i></small>
-            </td>
-          </tr>
-        </table>
-
-        <a href="#/messages/#inbox" class="btn btn-small pull-right">{{ui.dashboard.goToInbox}}</a>
-      </div> -->
-      <!-- end new messages -->
-
-      <!-- news -->
-      <div id="news" class="announcement">
-        <h4>Announcements</h4>
-        <hr>
-        <!-- p2000 loop -->
-        <table class="table table-striped">
-          <tr ng-repeat="alarm in alarms">
-            <td>
-              <h5>
-              <span class="label label-important" ng-show="alarm.prio.1">PRIO 1</span>
-              <span class="label label-warning" ng-show="alarm.prio.2">PRIO 2</span>
-              <span class="label label-info" ng-show="alarm.prio.3">PRIO 3</span>
-              {{alarm.body}}
-              </h5>
-              <span class="badge pull-right">{{alarm.msgCode}}</span>
-              <small class="muted"><i>{{alarm.day}} {{alarm.time}}</i></small>
-            </td>
-          </tr>
-        </table>
-        <!-- end p2000 loop -->
-      </div>
-      <!-- end news -->
-
-    </div>
-    <!-- end announcements sidebar -->
-
-  </div>
-  <!-- end span12 -->
 
 </div>
 <!-- end row-fluid -->
