--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -12,14 +12,12 @@
 
       <li class="active">
         <a href="#userSettingsTab" 
-            data-toggle="tab"
-            ng-click="fixTabHeight('userSettingsTab')"><span class="entypo">&#128100;</span> {{ui.settings.user}}</a>
+            data-toggle="tab"><span class="entypo">&#128100;</span> {{ui.settings.user}}</a>
       </li>
-      <!-- <li>
+      <li>
         <a href="#appSettingsTab" 
-            data-toggle="tab"
-            ng-click="fixTabHeight('appSettingsTab')"><span class="entypo">&#9881;</span> {{ui.settings.application}}</a>
-      </li> -->
+            data-toggle="tab"><span class="entypo">&#9881;</span> {{ui.settings.application}}</a>
+      </li>
     </ul>
     <!-- end tabs -->
 
@@ -58,9 +56,10 @@
                         ng-model="settings.user.google">
                 <button class="btn btn-success" 
                         type="button"
-                        ng-click="authGoogle(settings.user.google)">Authorize</button> -->
-                        
-              </div>
+                        ng-click="authGoogle(settings.user.google)">Authorize</button>
+
+              </div> -->
+
             </div>
 
             <br>
@@ -79,14 +78,37 @@
       <!-- end userSettingsTab -->
 
       <!-- appSettingsTab -->
-      <!-- <div class="tab-pane" id="appSettingsTab">
+      <div class="tab-pane" id="appSettingsTab">
 
         <div class="tab-header">
           <h3 class="pull-left">{{ui.settings.appSettings}}</h3>
         </div>
         <hr>
 
-      </div> -->
+        <!-- app settings form -->
+        <form>
+          <fieldset>
+        
+            <div class="control-group">
+              <label class="control-label">First group of choice</label>
+              <select ng-model="settings.app.group" 
+                      ng-options="option as value for (option, value) in groups">
+              </select>
+            </div>
+
+            <br>
+
+            <div class="form-actions">
+              <button type="submit" 
+                      ng-click="save(settings)" 
+                      class="btn btn-success">{{ui.settings.saveSettings}}</button>
+            </div>
+
+          </fieldset>
+        </form>
+        <!-- end user settings form -->
+
+      </div>
       <!-- end appSettingsTab -->
 
     </div>
