--- a/sass/app/_login.scss
+++ b/sass/app/_login.scss
@@ -1,3 +1,6 @@
+/**
+ * Welcoming page styles
+ */
 #welcome {
   margin: 30px auto 20px auto;
   padding: 35px 29px 19px 29px;
@@ -23,7 +26,10 @@
 }
 
 
-.login {
+/**
+ * Box style
+ */
+.boxed {
   margin: 0;
 
   label {
