--- a/war/js/views/logout.html
+++ b/war/js/views/logout.html
@@ -1,5 +1,7 @@
-<!-- loggin-out -->
-<div id="loading">
-  <span class="entypo">&#9203;</span>
+<div class="row-fluid">
+	<!-- loggin-out -->
+	<div id="loading">
+	  <span class="entypo">&#9203;</span>
+	</div>
+	<!-- end loggin-out -->
 </div>
-<!-- end loggin-out -->
