dashboard more optimized & toggler for announcements list

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -7,10 +7,9 @@
 @import "app/entypo";
 
 @import "app/styles";
-@import "app/pies";
-@import "app/announcements";
-@import "app/forms";
 @import "app/login";
+@import "app/dashboard";
+@import "app/forms";
 @import "app/frame";
 @import "app/notifications";
 @import "app/tabs";
