--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -3,14 +3,21 @@
 
   .widget {
     margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 
     .head {
       overflow: hidden;
+      height: 40px;
 
       h4 {
-        margin-top: 20px;
         display: inline;
+      }
+
+      #weeker {
+        display: inline;
+        margin: 0;
+        padding: 0;
+        float: left;
       }
 
       button {
@@ -20,7 +27,15 @@
       }
     }
 
-    ul {
+    hr {
+      margin-top: 0;
+    }
+
+    hr.lastline {
+      margin: 0 0 5px 0;
+    }
+
+    ul.itemslist {
       list-style: none;
       margin: 0;
       margin-top: -20px;
@@ -38,6 +53,10 @@
 
         &:nth-child(even) {
           background-color: #f9f9f9;
+        }
+
+        &:last-child {
+          border-bottom: none;
         }
 
         .pie {
