--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -9,14 +9,22 @@
 
       <!-- pie charts for groups -->
       <div class="widget span8">
+
         <div class="head">
-          <h4>{{ui.dashboard.thisWeek}}</h4>
-          <button class="btn btn-small"><i class="icon-cog"></i></button>
+          <!-- nav pills for weeker -->
+          <ul id="weeker" class="nav nav-pills">
+            <li class="{{(current==true) && 'active'}}"><a ng-click="weeker()">{{ui.dashboard.thisWeek}}</a></li>
+            <li class="{{(current==false) && 'active'}}"><a ng-click="weeker()">Next Week</a></li>
+          </ul>
+          <!-- end nav pills for weeker -->
+          <button class="btn btn-small" bs-modal="'js/views/elements/widget-pies.html'"><i class="icon-cog"></i></button>
         </div>
         <hr>
-        <p class="muted" ng-show="loading.status">{{loading.message}}</p>        
+
+        <p class="muted text-center" ng-show="loading.pies.status">{{loading.pies.message}}</p>
+
         <!-- pie loop -->
-        <ul ng-hide="loadingPies">
+        <ul class="itemslist" ng-hide="loading.pies.status">
           <li ng-repeat="pie in pies">
             <div id="weeklyPie-{{pie.id}}" class="pie"></div>
             <div class="info">
@@ -32,18 +40,24 @@
           </li>
         </ul>
         <!-- end pie loop -->
+
+        <hr class="lastline">
+        <p class="muted"><small><i>{{periods.first}} / {{periods.last}}</i></small></p>
+
       </div>
       <!-- end pie charts for groups -->
       
       <!-- announcements sidebar -->
       <div class="widget span4">
+
         <div class="head">
           <h4>Announcements</h4>
-          <button class="btn btn-small"><i class="icon-cog"></i></button>
+          <!-- <button class="btn btn-small"><i class="icon-cog"></i></button> -->
         </div>
         <hr>
+
         <!-- p2000 loop -->
-        <ul>
+        <ul class="itemslist">
           <li ng-repeat="alarm in alarms.list">
             <table>
               <tr>
@@ -69,8 +83,9 @@
           </li>
         </ul>
         <!-- end p2000 loop -->
-        <br>
-        <a class="pull-right" ng-click="toggle(more.status)">{{more.text}}</a>
+        <hr class="lastline">
+        <p><small><a class="pull-right" ng-click="toggle(more.status)">{{more.text}}</a></small></p>
+
       </div>
       <!-- end announcements sidebar -->
 
