--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -141,7 +141,7 @@
               </span>
             </dd>
           <dt>{{ui.message.date}}</dt>
-            <dd>{{message.creationTime|nicelyDate}}</dd>
+            <dd>{{message.creationTime}}</dd>
           <dt>{{ui.message.questionText}}</dt>
             <dd>{{message.question_text}}</dd>
         </dl>
@@ -203,7 +203,7 @@
                 <td><span class="label label-warning" ng-show="(message.state=='NEW')">{{ui.message.newMsg}}</span></td>
                 <td>{{message.requester|convertEve|convertUserIdToName}}</td>
                 <td><a ng-click="requestMessage(message.uuid, 'inbox')">{{message.subject}}</a></td>
-                <td>{{message.creationTime|nicelyDate}}</td>
+                <td>{{message.creationTime}}</td>
                 <td>
                   <div class="pull-right">
                     <button class="btn btn-mini"
@@ -270,7 +270,7 @@
                   <span ng-repeat="receiver in message.responder">{{receiver|convertEve|convertUserIdToName}}, </span>
                 </td>
                 <td><a ng-click="requestMessage(message.uuid,'outbox')">{{message.subject}}</a></td>
-                <td>{{message.creationTime|nicelyDate}}</td>
+                <td>{{message.creationTime}}</td>
                 <td>
                   <div class="pull-right">
                     <button type="submit" 
@@ -345,7 +345,7 @@
                   <span ng-repeat="receiver in message.responder">{{receiver|convertEve|convertUserIdToName}}, </span>
                 </td>
                 <td><a ng-click="requestMessage(message.uuid, 'trash')">{{message.subject}}</a></td>
-                <td>{{message.creationTime|nicelyDate}}</td>
+                <td>{{message.creationTime}}</td>
                 <td>
                   <div class="pull-right">
                     <button type="submit" 
