--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -74,7 +74,8 @@
                         class="btn btn-small" 
                         ng-model="broadcast.sms" 
                         ng-click=""
-                        bs-button="">{{ui.message.sms}}</button>
+                        bs-button=""
+                        ng-hide="app.resources.role > 1">{{ui.message.sms}}</button>
                 <button type="button" 
                         class="btn btn-small" 
                         ng-model="broadcast.email" 
