first stage in current statuses in groups overview in dashboard

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -37,6 +37,8 @@
               <h5>{{pie.ratios.less}}%</h5> 
               <small class="muted">less</small>
             </div>
+
+            {{pie.current}}
           </li>
         </ul>
         <!-- end pie loop -->
