--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -14,7 +14,7 @@
           <!-- nav pills for weeker -->
           <ul id="weeker" class="nav nav-pills">
             <li class="{{(current==true) && 'active'}}"><a ng-click="weeker()">{{ui.dashboard.thisWeek}}</a></li>
-            <li class="{{(current==false) && 'active'}}"><a ng-click="weeker()">Next Week</a></li>
+            <li class="{{(current==false) && 'active'}}"><a ng-click="weeker()">Volgende Week</a></li>
           </ul>
           <!-- end nav pills for weeker -->
           <button class="btn btn-small" bs-modal="'js/views/elements/widget-pies.html'"><i class="icon-cog"></i></button>
@@ -26,25 +26,67 @@
         <!-- pie loop -->
         <ul class="itemslist" ng-hide="loading.pies.status">
           <li ng-repeat="pie in pies">
-            <div id="weeklyPie-{{pie.id}}" class="pie"></div>
-            <div class="info">
-              <h3>{{pie.name | truncateGroupTitle}}</h3>
-              <hr>
-              <h5>{{pie.ratios.more}}%</h5> 
-              <small class="muted">more</small>, 
-              <h5>{{pie.ratios.even}}%</h5> 
-              <small class="muted">even</small>, 
-              <h5>{{pie.ratios.less}}%</h5> 
-              <small class="muted">less</small>
+
+            <div class="block-title">
+              <h4>{{pie.name}}</h4>
             </div>
 
-            {{pie.current}}
+            <div class="block">
+
+              <table>
+                <tr>
+                  <td><h6>Current status</h6></td>
+                  <td>
+                    <span class="badge badge-success" ng-show="pie.current.diff > 0">{{pie.current.diff}}</span>
+                    <span class="badge badge-warning" ng-show="pie.current.diff == 0">{{pie.current.diff}}</span>
+                    <span class="badge badge-important" ng-show="pie.current.diff < 0">{{pie.current.diff}}</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td><span class="muted"><i>Start:</i></span></td>
+                  <td>{{pie.current.start|nicelyDate}}</td>
+                </tr>
+                <tr>
+                  <td><span class="muted"><i>End:</i></span></td>
+                  <td>{{pie.current.end|nicelyDate}}</td>
+                </tr>
+                <tr>
+                  <td><span class="muted"><i>Wish:</i></span></td>
+                  <td>{{pie.current.wish}}</td>
+                </tr>
+              </table>
+            </div>
+
+            <div class="block">
+              <div id="weeklyPie-{{pie.id}}" class="pie"></div>
+              <div class="info">
+                <h3>{{pie.name | truncateGroupTitle}}</h3>
+                <hr>
+                <h5>{{pie.ratios.more}}%</h5> 
+                <small class="muted">more</small>, 
+                <h5>{{pie.ratios.even}}%</h5> 
+                <small class="muted">even</small>, 
+                <h5>{{pie.ratios.less}}%</h5> 
+                <small class="muted">less</small>
+              </div>
+            </div>
+
           </li>
         </ul>
         <!-- end pie loop -->
 
         <hr class="lastline">
-        <p class="muted"><small><i>{{periods.first}} / {{periods.last}}</i></small></p>
+        <p>
+          <small class="pull-right">
+            <span class="text-warning">Periods: </span>
+            <span class="muted">
+              &nbsp;
+              {{periods.start | nicelyDate}}
+              &nbsp;/&nbsp;
+              {{periods.end | nicelyDate}}
+            </span>
+          </small>
+        </p>
 
       </div>
       <!-- end pie charts for groups -->
