dashboard current statuses improved

--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -58,10 +58,30 @@ dl {
   background-color: #433c2d;
 }
 
+
 .label-natural[href],
 .badge-natural[href] {
   background-color: #342f23;
 }
+
+
+.label-more,
+.badge-more {
+  background-color: #415e6b;
+}
+
+
+.label-less,
+.badge-less {
+  background-color: #a0a0a0;
+}
+
+
+.label-even,
+.badge-even {
+  background-color: #ba6a24;
+}
+
 
 .modal-body {
   ul {
