--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -64,6 +64,7 @@
           h4 {
             display: block;
             margin: 0;
+            margin-bottom: 10px;
           }
         }
 
@@ -89,6 +90,7 @@
                 }
 
                 h6 {
+                  margin-top: 0; 
                   margin-bottom: 0;  
                 }
 
