--- a/war/js/views/elements/widget-pies.html
+++ b/war/js/views/elements/widget-pies.html
@@ -16,23 +16,13 @@
           <ul>
             <li ng-repeat="group in modal.groups">
               <label>
-                <input type="checkbox" ng-modal="modal.selected"> {{group.name}}
+                <input type="checkbox" ng-modal="modal.selected[group.uuid]"> {{group.name}}
               </label>
             </li>
           </ul>
 
-          <!-- <select data-placeholder=" " 
-                  multiple 
-                  class="chzn-select" 
-                  style="width:530px" 
-                  chosen
-                  ng-model="modal.groups" 
-                  ng-options="group.name for group in modal.groups">
-          </select> -->
-          <!-- <p ng-repeat="group in memberForm.groups"><strong>{{group.uuid}}</strong></p> -->
-
         </div>
-        </div>
+      </div>
         
     </fieldset>
   </form>
