--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -655,7 +655,7 @@ div.timeline-event.state-unavailable {
 
 
 div.timeline-event div.timeline-event-content span.secret {
-  font-size: 0;
+  font-size: 1px;
 }
 
 
