css right border fix

--- a/sass/app/_tabs.scss
+++ b/sass/app/_tabs.scss
@@ -40,6 +40,15 @@ ul.nav-tabs-app {
   }
 }
 
+.tabs-left {
+  .tab-content {
+    border-left: 1px solid #ddd;
+  }
+}
+
+.tabs-left > .nav-tabs {
+  border-right: none;
+}
 
 .nav-tabs-list {
   margin-right: -1px;
