--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -204,7 +204,7 @@
                 <td><span class="label label-warning" ng-show="(message.state=='NEW')">{{ui.message.newMsg}}</span></td>
                 <td>{{message.requester|convertEve|convertUserIdToName}}</td>
                 <td><a ng-click="requestMessage(message.uuid, 'inbox')">{{message.subject}}</a></td>
-                <td>{{message.creationTime}}</td>
+                <td>{{message.creationTime | nicelyDate}}</td>
                 <td>
                   <div class="pull-right">
                     <button class="btn btn-mini"
