--- a/sass/app/_login.scss
+++ b/sass/app/_login.scss
@@ -65,9 +65,17 @@
       display: block;
       margin-top: 10px;
       margin-bottom: -20px;
-      color: #aaa;
       text-align: center;
       font-size: 11px;
+
+      a {
+        color: #aaa;
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
 
     .alert {
