--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -46,7 +46,7 @@
 			  	<a ng-click="changeLanguage('nl')">Nederlands</a>
 		  	</small>
 		  </p>
-		  <span class="version">v{{config.version}}</span>
+		  <span class="version"><a href="version.html" target="_blank">v{{config.version}}</a></span>
 		</form>
 	</div>
 	<!-- end loginForm -->
@@ -68,7 +68,7 @@
 
 		  <button class="btn btn-large btn-primary" type="submit">{{ui.login.resetPassword}}</button>
 		  <p><small><a ng-click="views.login=true; views.forgot=false">{{ui.login.returnLogin}}</a></small></p>
-		  <span class="version">v{{config.version}}</span>
+		  <span class="version"><a href="version.html" target="_blank">v{{config.version}}</a></span>
 		</form>
 	</div>
 	<!-- end remember login -->
@@ -88,7 +88,7 @@
 			
 			<button class="btn btn-large btn-primary" type="submit">{{ui.login.changePassword}}</button>
 
-		    <br><span class="version">v{{config.version}}</span>
+		    <br><span class="version"><a href="version.html" target="_blank">v{{config.version}}</a></span>
 		</form>
 	</div>
 	
