hot fix for not displaying date time conversions in message center

--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -142,7 +142,7 @@
               </span>
             </dd>
           <dt>{{ui.message.date}}</dt>
-            <dd>{{message.creationTime}}</dd>
+            <dd>{{message.creationTime | nicelyDate}}</dd>
           <dt>{{ui.message.questionText}}</dt>
             <dd>{{message.question_text}}</dd>
         </dl>
@@ -271,7 +271,7 @@
                   <span ng-repeat="receiver in message.responder">{{receiver|convertEve|convertUserIdToName}}, </span>
                 </td>
                 <td><a ng-click="requestMessage(message.uuid,'outbox')">{{message.subject}}</a></td>
-                <td>{{message.creationTime}}</td>
+                <td>{{message.creationTime | nicelyDate}}</td>
                 <td>
                   <div class="pull-right">
                     <button type="submit" 
@@ -346,7 +346,7 @@
                   <span ng-repeat="receiver in message.responder">{{receiver|convertEve|convertUserIdToName}}, </span>
                 </td>
                 <td><a ng-click="requestMessage(message.uuid, 'trash')">{{message.subject}}</a></td>
-                <td>{{message.creationTime}}</td>
+                <td>{{message.creationTime | nicelyDate}}</td>
                 <td>
                   <div class="pull-right">
                     <button type="submit" 
