--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -42,11 +42,11 @@
                 </tr>
                 <tr>
                   <td><span class="muted"><i>Start:</i></span></td>
-                  <td><small>{{pie.current.start|nicelyDate}}</small></td>
+                  <td><small>{{pie.current.start}}</small></td>
                 </tr>
                 <tr>
                   <td><span class="muted"><i>End:</i></span></td>
-                  <td><small>{{pie.current.end|nicelyDate}}</small></td>
+                  <td><small>{{pie.current.end}}</small></td>
                 </tr>
                 <tr>
                   <td><span class="muted"><i>Behoefte:</i></span></td>
