dynamic listing for legenda based on available states of that particular installation

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -17,7 +17,7 @@
             <li class="{{(current==false) && 'active'}}"><a ng-click="weeker()">Volgende Week</a></li>
           </ul>
           <!-- end nav pills for weeker -->
-          <!-- <button class="btn btn-small" bs-modal="'js/views/elements/widget-pies.html'"><i class="icon-cog"></i></button> -->
+          <button class="btn btn-small" bs-modal="'js/views/elements/widget-pies.html'"><i class="icon-cog"></i></button>
         </div>
         <hr>
 
