--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -217,29 +217,60 @@
 }
 
 
-.legenda-row .legenda-Available .square {
+
+
+
+.legenda-row .legenda-state-available .square {
   background-color: #4f824f;
 }
 
-.legenda-row .legenda-BeschikbaarZuid .square {
-  background-color: #e08a0c;
-}
-
-.legenda-row .legenda-BeschikbaarNoord .square {
+.legenda-row .legenda-state-available-north .square {
   background-color: black; 
 }
 
-.legenda-row .legenda-SchipperVanDienst .square {
-  background-color: #e0c100; 
+.legenda-row .legenda-state-available-south .square {
+  background-color: #e08a0c;
 }
 
-.legenda-row .legenda-Unavailable .square {
+.legenda-row .legenda-state-unavailable .square {
   background-color: #a93232;  
 }
 
-.legenda-row .legenda-NotReached .square {
-  background-color: #65619b;  
+.legenda-row .legenda-state-schipper-service .square {
+  background-color: #e0c100; 
 }
+
+.legenda-row .legenda-state-unreached .square {
+  background-color: #65619b;
+}
+
+
+
+
+
+// .legenda-row .legenda-Available .square {
+//   background-color: #4f824f;
+// }
+
+// .legenda-row .legenda-BeschikbaarZuid .square {
+//   background-color: #e08a0c;
+// }
+
+// .legenda-row .legenda-BeschikbaarNoord .square {
+//   background-color: black; 
+// }
+
+// .legenda-row .legenda-SchipperVanDienst .square {
+//   background-color: #e0c100; 
+// }
+
+// .legenda-row .legenda-Unavailable .square {
+//   background-color: #a93232;  
+// }
+
+// .legenda-row .legenda-NotReached .square {
+//   background-color: #65619b;  
+// }
 
 .legenda-row .legenda-more .square {
   background-color: #415e6b;  
@@ -252,6 +283,9 @@
 .legenda-row .legenda-less .square {
   background-color: #a0a0a0;  
 }
+
+
+
 
 
 
